compiler/tools/fpp-check/test/top_import/undef_topology.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/top_import/undef_topology.fpp:3.10
  import A
         ^
error: cannot find symbol `A`
note: looking for a topology here
